# librarian

./: .envrc  Dockerfile  Makefile  README.md  pyproject.toml  skaffold.yaml
.devcontainer/: devcontainer.json
manifests/base/: knative-service.yaml
src/librarian/: server.py
