[project]
name = "librarian"
version = "0.1.0"
description = "A library of knowledge for the world to explore"
authors = [
    {name = "William Phetsinorath", email = "phetsinorath.w@sfeir.com"},
]
dependencies = [
    "langchain>=0.1.0",
    "langserve>=0.0.38",
    "fastapi>=0.108.0",
    "google-cloud-aiplatform>=1.39.0",
    "setuptools>=69.0.3",
    "google-cloud-discoveryengine>=0.11.5",
    "uvicorn>=0.25.0",
    "langchainhub>=0.1.14",
    "sse-starlette>=1.8.2",
    "pydantic<=2.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = "MIT"

[tool.pdm]
package-type = "application"
